# bonsai-vitals

./: README.md  extra_script.py  platformio.ini
boards/: ESP-LCD.json
src/: CMakeLists.txt  ESP_Panel_Board_Custom.h  ESP_Panel_Board_Supported.h  app.cpp  filelist.txt  lv_conf.h  lvgl_port_v8.h  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.h
src/events/: events.h  getWifiStatus.cpp  readMoisture.cpp
src/images/: ui_img_1588936248.c  ui_img_786474294.c  ui_img_cogwheel_png.c  ui_img_gauge_png.c  ui_img_wifi_png.c
src/screens/: ui_MoistureScreen.c  ui_Screen1.c  ui_SettingsScreen.c  ui_TimeScreen.c  ui_WiFiScreen.c
src/util/: asyncWebServer.cpp  asyncWebServer.h  expander.cpp  expander.h  preferences.h  readMoistureSensor.cpp  readMoistureSensor.h
web/: package-lock.json  package.json
web/src/: App.tsx  types.ts
